Remove 'Pobierz Case Study' button and trial disclaimer from FleetParts page

--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -29,10 +29,13 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>FleetParts Dashboard - Zarządzanie Flotą</title>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+        rel="stylesheet" />
     <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries" data-cookieconsent="ignore"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,container-queries"
+        data-cookieconsent="ignore"></script>
     <script>
         tailwind.config = {
             darkMode: "class",
@@ -192,7 +195,8 @@
             <div
                 class="inline-flex items-center gap-2 px-4 py-2 mb-8 rounded-pill bg-white border border-slate-200 shadow-sm dark:bg-slate-800 dark:border-slate-700 animate-fade-in-up">
                 <span class="relative flex h-2 w-2">
-                    <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-primary opacity-75"></span>
+                    <span
+                        class="animate-ping absolute inline-flex h-full w-full rounded-full bg-primary opacity-75"></span>
                     <span class="relative inline-flex rounded-full h-2 w-2 bg-primary"></span>
                 </span>
                 <span class="text-sm font-medium text-slate-600 dark:text-slate-300">Inteligentna Flota 2.0</span>
@@ -236,13 +240,17 @@
                 <path class="stroke-primary/30 dash-line" d="M50 50 L25 75" fill="none" stroke-width="0.3"></path>
                 <path class="stroke-primary/30 dash-line" d="M50 50 L75 75" fill="none" stroke-width="0.3"></path>
             </svg>
-            <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10 flex flex-col items-center justify-center">
+            <div
+                class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10 flex flex-col items-center justify-center">
                 <div class="absolute inset-0 bg-primary/20 rounded-full animate-ping blur-md"></div>
-                <div class="absolute -inset-8 border border-dashed border-primary/20 rounded-full animate-[spin_20s_linear_infinite]"></div>
+                <div
+                    class="absolute -inset-8 border border-dashed border-primary/20 rounded-full animate-[spin_20s_linear_infinite]">
+                </div>
                 <div
                     class="w-32 h-32 bg-hub-dark rounded-full flex items-center justify-center shadow-[0_0_50px_-10px_rgba(60,193,176,0.5)] border-4 border-[#1e293b] relative z-20 group">
                     <div class="absolute inset-0 rounded-full border border-primary/10 animate-pulse"></div>
-                    <i data-lucide="network" class="w-12 h-12 text-primary animate-pulse group-hover:scale-110 transition-transform duration-500"></i>
+                    <i data-lucide="network"
+                        class="w-12 h-12 text-primary animate-pulse group-hover:scale-110 transition-transform duration-500"></i>
                 </div>
                 <div class="mt-4 bg-hub-dark px-4 py-1.5 rounded-full border border-primary/30 shadow-lg relative z-20">
                     <span class="text-[10px] font-bold text-white uppercase tracking-widest whitespace-nowrap">Centrum
@@ -315,7 +323,8 @@
         </div>
     </section>
 
-    <section id="process" class="py-16 md:py-20 bg-background-light dark:bg-background-dark relative border-b border-slate-100 dark:border-slate-800">
+    <section id="process"
+        class="py-16 md:py-20 bg-background-light dark:bg-background-dark relative border-b border-slate-100 dark:border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center max-w-3xl mx-auto mb-16">
                 <span class="text-primary font-bold tracking-wider uppercase text-xs mb-3 block">Prosty Proces</span>
@@ -460,8 +469,7 @@
                 </div>
                 <div
                     class="relative p-10 rounded-3xl bg-white dark:bg-slate-800 border-2 border-primary shadow-2xl transform md:scale-105 z-10">
-                    <div
-                        class="absolute -top-5 -right-5 bg-primary text-white p-3 rounded-full shadow-lg">
+                    <div class="absolute -top-5 -right-5 bg-primary text-white p-3 rounded-full shadow-lg">
                         <i data-lucide="check" class="w-8 h-8"></i>
                     </div>
                     <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-4">Pełna kontrola w 30 sekund</h3>
@@ -494,17 +502,11 @@
                 optymalizację swojej floty?</h2>
             <p class="text-xl text-slate-600 dark:text-slate-300 mb-10 max-w-2xl mx-auto">Dołącz do firm, które
                 oszczędzają średnio 23% na kosztach części zamiennych w pierwszych 3 miesiącach.</p>
-            <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a class="inline-flex items-center justify-center px-8 py-4 text-lg font-bold text-white bg-primary rounded-pill hover:bg-primaryDark transition-all shadow-xl hover:shadow-2xl hover:-translate-y-1"
-                    href="#">
-                    Umów bezpłatną konsultację
-                </a>
-                <a class="inline-flex items-center justify-center px-8 py-4 text-lg font-semibold text-slate-700 dark:text-slate-200 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-pill hover:bg-slate-50 dark:hover:bg-slate-700 transition-all"
-                    href="#">
-                    Pobierz Case Study
-                </a>
-            </div>
-            <p class="mt-6 text-sm text-slate-500 dark:text-slate-400">Bez karty kredytowej • 14 dni okresu próbnego</p>
+            <a class="inline-flex items-center justify-center px-8 py-4 text-lg font-bold text-white bg-primary rounded-pill hover:bg-primaryDark transition-all shadow-xl hover:shadow-2xl hover:-translate-y-1"
+                href="#">
+                Umów bezpłatną konsultację
+            </a>
+
         </div>
     </section>
 
