--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -500,8 +500,8 @@
         <div class="max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-display font-bold text-slate-900 dark:text-white mb-6">Gotowy na
                 optymalizację swojej floty?</h2>
-            <p class="text-xl text-slate-600 dark:text-slate-300 mb-10 max-w-2xl mx-auto">Dołącz do firm, które
-                oszczędzają średnio 23% na kosztach części zamiennych w pierwszych 3 miesiącach.</p>
+            <p class="text-xl text-slate-600 dark:text-slate-300 mb-10 max-w-2xl mx-auto">Przestań zgadywać, ile
+                wydajesz na flotę. Przejrzyste dane, proste decyzje.</p>
             <a class="inline-flex items-center justify-center px-8 py-4 text-lg font-bold text-white bg-primary rounded-pill hover:bg-primaryDark transition-all shadow-xl hover:shadow-2xl hover:-translate-y-1"
                 href="#">
                 Umów bezpłatną konsultację
