--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -464,46 +464,46 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div
-                    class="group p-8 bg-gradient-to-br from-blue-50 to-blue-100/50 dark:from-blue-900/30 dark:to-blue-800/20 rounded-2xl border-2 border-blue-200 dark:border-blue-700/50 shadow-lg hover:shadow-2xl hover:shadow-blue-500/20 transition-all hover:-translate-y-2">
+                    class="group p-8 bg-white dark:bg-slate-800 rounded-2xl border-l-4 border-blue-400 dark:border-blue-500 shadow-soft hover:shadow-lg hover:border-blue-500 dark:hover:border-blue-400 transition-all hover:-translate-y-1">
                     <div
-                        class="w-16 h-16 bg-blue-500 dark:bg-blue-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 group-hover:rotate-3 transition-all shadow-lg">
-                        <i data-lucide="cloud-download" class="w-8 h-8 text-white"></i>
+                        class="w-14 h-14 bg-blue-50 dark:bg-blue-900/20 rounded-xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <i data-lucide="cloud-download" class="w-7 h-7 text-blue-600 dark:text-blue-400"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-blue-900 dark:text-blue-100 mb-3">Import Wielu Dostawców</h3>
-                    <p class="text-blue-800 dark:text-blue-200 leading-relaxed font-medium">Wsparcie wielu dostawców
+                    <h3 class="text-xl font-bold text-slate-900 dark:text-white mb-3">Import Wielu Dostawców</h3>
+                    <p class="text-slate-600 dark:text-slate-400 leading-relaxed">Wsparcie wielu dostawców
                         części.
                         Faktury i zamówienia wpadają do systemu w czasie rzeczywistym.</p>
                 </div>
                 <div
-                    class="group p-8 bg-gradient-to-br from-red-50 to-red-100/50 dark:from-red-900/30 dark:to-red-800/20 rounded-2xl border-2 border-red-200 dark:border-red-700/50 shadow-lg hover:shadow-2xl hover:shadow-red-500/20 transition-all hover:-translate-y-2">
+                    class="group p-8 bg-white dark:bg-slate-800 rounded-2xl border-l-4 border-red-400 dark:border-red-500 shadow-soft hover:shadow-lg hover:border-red-500 dark:hover:border-red-400 transition-all hover:-translate-y-1">
                     <div
-                        class="w-16 h-16 bg-red-500 dark:bg-red-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 group-hover:rotate-3 transition-all shadow-lg">
-                        <i data-lucide="bell-ring" class="w-8 h-8 text-white"></i>
+                        class="w-14 h-14 bg-red-50 dark:bg-red-900/20 rounded-xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <i data-lucide="bell-ring" class="w-7 h-7 text-red-600 dark:text-red-400"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-red-900 dark:text-red-100 mb-3">Alerty Budżetowe 24/7</h3>
-                    <p class="text-red-800 dark:text-red-200 leading-relaxed font-medium">Otrzymuj powiadomienia, zanim
+                    <h3 class="text-xl font-bold text-slate-900 dark:text-white mb-3">Alerty Budżetowe 24/7</h3>
+                    <p class="text-slate-600 dark:text-slate-400 leading-relaxed">Otrzymuj powiadomienia, zanim
                         przekroczysz budżet. Pełna kontrola wydatków w każdym momencie.</p>
                 </div>
                 <div
-                    class="group p-8 bg-gradient-to-br from-emerald-50 to-emerald-100/50 dark:from-emerald-900/30 dark:to-emerald-800/20 rounded-2xl border-2 border-emerald-200 dark:border-emerald-700/50 shadow-lg hover:shadow-2xl hover:shadow-emerald-500/20 transition-all hover:-translate-y-2">
+                    class="group p-8 bg-white dark:bg-slate-800 rounded-2xl border-l-4 border-emerald-400 dark:border-emerald-500 shadow-soft hover:shadow-lg hover:border-emerald-500 dark:hover:border-emerald-400 transition-all hover:-translate-y-1">
                     <div
-                        class="w-16 h-16 bg-emerald-500 dark:bg-emerald-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 group-hover:rotate-3 transition-all shadow-lg">
-                        <i data-lucide="map-pin" class="w-8 h-8 text-white"></i>
+                        class="w-14 h-14 bg-emerald-50 dark:bg-emerald-900/20 rounded-xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <i data-lucide="map-pin" class="w-7 h-7 text-emerald-600 dark:text-emerald-400"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-emerald-900 dark:text-emerald-100 mb-3">Zarządzanie Oddziałami
+                    <h3 class="text-xl font-bold text-slate-900 dark:text-white mb-3">Zarządzanie Oddziałami
                     </h3>
-                    <p class="text-emerald-800 dark:text-emerald-200 leading-relaxed font-medium">Centralne zarządzanie
+                    <p class="text-slate-600 dark:text-slate-400 leading-relaxed">Centralne zarządzanie
                         wieloma
                         lokalizacjami. Porównuj koszty i efektywność poszczególnych oddziałów.</p>
                 </div>
                 <div
-                    class="group p-8 bg-gradient-to-br from-purple-50 to-purple-100/50 dark:from-purple-900/30 dark:to-purple-800/20 rounded-2xl border-2 border-purple-200 dark:border-purple-700/50 shadow-lg hover:shadow-2xl hover:shadow-purple-500/20 transition-all hover:-translate-y-2">
+                    class="group p-8 bg-white dark:bg-slate-800 rounded-2xl border-l-4 border-purple-400 dark:border-purple-500 shadow-soft hover:shadow-lg hover:border-purple-500 dark:hover:border-purple-400 transition-all hover:-translate-y-1">
                     <div
-                        class="w-16 h-16 bg-purple-500 dark:bg-purple-600 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 group-hover:rotate-3 transition-all shadow-lg">
-                        <i data-lucide="brain" class="w-8 h-8 text-white"></i>
+                        class="w-14 h-14 bg-purple-50 dark:bg-purple-900/20 rounded-xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+                        <i data-lucide="brain" class="w-7 h-7 text-purple-600 dark:text-purple-400"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-purple-900 dark:text-purple-100 mb-3">Analityka AI</h3>
-                    <p class="text-purple-800 dark:text-purple-200 leading-relaxed font-medium">Sztuczna inteligencja
+                    <h3 class="text-xl font-bold text-slate-900 dark:text-white mb-3">Analityka AI</h3>
+                    <p class="text-slate-600 dark:text-slate-400 leading-relaxed">Sztuczna inteligencja
                         analizuje
                         wzorce zakupowe i sugeruje gdzie możesz zaoszczędzić najwięcej.</p>
                 </div>
