Add header and description to Excel vs System comparison section

--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -513,6 +513,16 @@
 
     <section class="py-16 bg-slate-50 dark:bg-slate-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Section Header -->
+            <div class="text-center max-w-3xl mx-auto mb-16">
+                <h2 class="text-3xl md:text-4xl font-display font-bold text-slate-900 dark:text-white mb-4">
+                    Excel czy Inteligentny System?
+                </h2>
+                <p class="text-lg text-slate-600 dark:text-slate-400">
+                    Większość firm nadal zarządza kosztami floty przez ręczne przepisywanie faktur. Zobaczysz różnicę,
+                    gdy przestaniesz tracić czas na domysły.
+                </p>
+            </div>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div
                     class="relative p-8 rounded-3xl bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 opacity-90 grayscale-[0.5] hover:grayscale-0 transition-all duration-500">
