Expand FluintyFleet card content to match FluintyDebt height

--- a/index.html
+++ b/index.html
@@ -1079,12 +1079,30 @@
                         </div>
 
                         <h3 class="text-2xl font-bold text-text-main mb-3">FluintyFleet</h3>
-                        <p class="text-text-muted mb-8 leading-relaxed">
-                            Kompleksowe zarządzanie flotą pod ręką. Monitoruj koszty serwisowania, ubezpieczeń i paliwa
-                            w jednym, intuicyjnym dashboardzie.
-                            Zyskaj pełną kontrolę nad wydatkami firmowymi i optymalizuj koszty utrzymania pojazdów bez
-                            zbędnej biurokracji.
-                        </p>
+                        <div class="space-y-4 mb-8">
+                            <p class="text-text-muted leading-relaxed">
+                                <strong>Kompleksowe zarządzanie flotą pod ręką.</strong> Monitoruj koszty serwisowania,
+                                ubezpieczeń i paliwa
+                                w jednym, intuicyjnym dashboardzie. Zyskaj pełną kontrolę nad wydatkami firmowymi i
+                                optymalizuj koszty utrzymania pojazdów bez zbędnej biurokracji.
+                            </p>
+                            <p class="text-text-muted leading-relaxed">
+                                System automatycznie pobiera zamówienia od dostawców (m.in. InterCars API), przypisuje
+                                do konkretnych pojazdów i oddziałów. Manager weryfikuje w 30 sekund, a Ty otrzymujesz
+                                alerty budżetowe zanim przekroczysz limity.
+                            </p>
+                            <ul class="text-sm text-text-muted space-y-2">
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-accent"></i> <strong>Zaoszczędź średnio 23%</strong> na
+                                    częściach zamiennych</li>
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-accent"></i> <strong>Import z wielu dostawców</strong> w
+                                    czasie rzeczywistym</li>
+                                <li class="flex items-center gap-2"><i data-lucide="check"
+                                        class="w-4 h-4 text-accent"></i> <strong>Wielooddziałowe zarządzanie</strong> z
+                                    jednego miejsca</li>
+                            </ul>
+                        </div>
 
                         <a href="pages/fluinty-fleet.html"
                             class="inline-flex items-center gap-2 text-primary font-bold group-hover:gap-3 transition-all">
