Remove fabricated 23% statistic from FluintyFleet card

--- a/index.html
+++ b/index.html
@@ -1093,8 +1093,8 @@
                             </p>
                             <ul class="text-sm text-text-muted space-y-2">
                                 <li class="flex items-center gap-2"><i data-lucide="check"
-                                        class="w-4 h-4 text-accent"></i> <strong>Zaoszczędź średnio 23%</strong> na
-                                    częściach zamiennych</li>
+                                        class="w-4 h-4 text-accent"></i> <strong>Pełna kontrola budżetu</strong> w
+                                    czasie rzeczywistym</li>
                                 <li class="flex items-center gap-2"><i data-lucide="check"
                                         class="w-4 h-4 text-accent"></i> <strong>Import z wielu dostawców</strong> w
                                     czasie rzeczywistym</li>
