Fix mobile timeline layout and align Zobacz Wiecej buttons

--- a/index.html
+++ b/index.html
@@ -1030,13 +1030,13 @@
                         <i data-lucide="shield-check" class="w-32 h-32 text-primary"></i>
                     </div>
 
-                    <div class="relative z-10">
+                    <div class="relative z-10 flex flex-col h-full">
                         <div class="w-14 h-14 bg-primary/10 rounded-2xl flex items-center justify-center mb-6">
                             <i data-lucide="shield-check" class="w-7 h-7 text-primary"></i>
                         </div>
 
                         <h3 class="text-2xl font-bold text-text-main mb-3">FluintyDebt</h3>
-                        <div class="space-y-4 mb-8">
+                        <div class="space-y-4 mb-8 flex-grow">
                             <p class="text-text-muted leading-relaxed">
                                 <strong>Zamień stres na gotówkę.</strong> FluintyDebt to Twój automatyczny strażnik
                                 płynności finansowej, który pracuje 24/7, by Twoje faktury były opłacane na czas.
@@ -1073,13 +1073,13 @@
                         <i data-lucide="truck" class="w-32 h-32 text-accent"></i>
                     </div>
 
-                    <div class="relative z-10">
+                    <div class="relative z-10 flex flex-col h-full">
                         <div class="w-14 h-14 bg-accent/10 rounded-2xl flex items-center justify-center mb-6">
                             <i data-lucide="truck" class="w-7 h-7 text-accent"></i>
                         </div>
 
                         <h3 class="text-2xl font-bold text-text-main mb-3">FluintyFleet</h3>
-                        <div class="space-y-4 mb-8">
+                        <div class="space-y-4 mb-8 flex-grow">
                             <p class="text-text-muted leading-relaxed">
                                 <strong>Kompleksowe zarządzanie flotą pod ręką.</strong> Monitoruj koszty serwisowania,
                                 ubezpieczeń i paliwa
