--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -343,6 +343,11 @@
                 <!-- Step 1 -->
                 <div class="relative mb-16 md:mb-24">
                     <div class="flex flex-col md:flex-row items-center gap-8">
+                        <!-- Mobile number (shows first on mobile) -->
+                        <div
+                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
+                            1
+                        </div>
                         <!-- Left side (desktop) -->
                         <div class="md:w-1/2 md:text-right md:pr-12">
                             <div
@@ -367,11 +372,6 @@
                                 1
                             </div>
                         </div>
-                        <!-- Mobile number -->
-                        <div
-                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
-                            1
-                        </div>
                         <!-- Right side placeholder -->
                         <div class="hidden md:block md:w-1/2"></div>
                     </div>
@@ -380,6 +380,11 @@
                 <!-- Step 2 -->
                 <div class="relative mb-16 md:mb-24">
                     <div class="flex flex-col md:flex-row items-center gap-8">
+                        <!-- Mobile number (shows first on mobile) -->
+                        <div
+                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
+                            2
+                        </div>
                         <!-- Left side placeholder -->
                         <div class="hidden md:block md:w-1/2"></div>
                         <!-- Center number -->
@@ -388,11 +393,6 @@
                                 class="w-16 h-16 rounded-full bg-primary text-white flex items-center justify-center font-bold text-2xl shadow-xl border-4 border-background-light dark:border-background-dark z-10">
                                 2
                             </div>
-                        </div>
-                        <!-- Mobile number -->
-                        <div
-                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
-                            2
                         </div>
                         <!-- Right side (desktop) -->
                         <div class="md:w-1/2 md:pl-12">
@@ -417,6 +417,11 @@
                 <!-- Step 3 -->
                 <div class="relative">
                     <div class="flex flex-col md:flex-row items-center gap-8">
+                        <!-- Mobile number (shows first on mobile) -->
+                        <div
+                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
+                            3
+                        </div>
                         <!-- Left side (desktop) -->
                         <div class="md:w-1/2 md:text-right md:pr-12">
                             <div
@@ -440,11 +445,6 @@
                                 class="w-16 h-16 rounded-full bg-primary text-white flex items-center justify-center font-bold text-2xl shadow-xl border-4 border-background-light dark:border-background-dark z-10">
                                 3
                             </div>
-                        </div>
-                        <!-- Mobile number -->
-                        <div
-                            class="md:hidden w-12 h-12 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl shadow-lg">
-                            3
                         </div>
                         <!-- Right side placeholder -->
                         <div class="hidden md:block md:w-1/2"></div>
