Update FleetParts hero copy to emphasize cost visibility

--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -208,8 +208,8 @@
                 <span class="text-primary">FleetParts Dashboard</span>
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-lg md:text-xl text-slate-600 dark:text-slate-400 mb-10">
-                Wdrażamy inteligentnych agentów AI. Integracja z systemami dostawców (m.in. InterCars) pozwala przejąć
-                kontrolę nad budżetem. Odzyskaj czas i skup się na strategii.
+                Żaden koszt nie ukryje. Widzisz każdą złotówkę wydaną na flotę. System automatycznie integruje się z
+                dostawcami, przypisuje koszty do pojazdów i alarmuje zanim przekroczysz budżet.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
                 <a class="w-full sm:w-auto px-8 py-4 text-base font-semibold text-white bg-primary rounded-pill hover:bg-primaryDark transition-all shadow-glow hover:shadow-lg hover:-translate-y-1"
