--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -208,7 +208,7 @@
                 <span class="text-primary">FleetParts Dashboard</span>
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-lg md:text-xl text-slate-600 dark:text-slate-400 mb-10">
-                Żaden koszt nie ukryje. Widzisz każdą złotówkę wydaną na flotę. System automatycznie integruje się z
+                Żaden koszt się nie ukryje. Widzisz każdą złotówkę wydaną na flotę. System automatycznie integruje się z
                 dostawcami, przypisuje koszty do pojazdów i alarmuje zanim przekroczysz budżet.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
