Update hero heading: FleetParts Dashboard -> FluintyFleet

--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -204,11 +204,11 @@
             <h1
                 class="font-display text-5xl md:text-6xl lg:text-7xl font-extrabold tracking-tight mb-6 text-slate-900 dark:text-white leading-[1.1]">
                 Zapanuj nad <br class="hidden md:block" />
-                kosztami floty z <br />
-                <span class="text-primary">FleetParts Dashboard</span>
+                kosztami swojej floty z <br />
+                <span class="text-primary">FluintyFleet</span>
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-lg md:text-xl text-slate-600 dark:text-slate-400 mb-10">
-                Żaden koszt się nie ukryje. Widzisz każdą złotówkę wydaną na flotę. System automatycznie integruje się z
+                Żaden koszt się nie ukryje, widzisz każdą złotówkę wydaną na flotę. System automatycznie integruje się z
                 dostawcami, przypisuje koszty do pojazdów i alarmuje zanim przekroczysz budżet.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
